#4 - MainMinMax agora também utiliza VirtualThreads.